# elrond-tradeoffer

./: .gitignore  README.md
src/bot/: Elrond.TradeOffer.sln
src/bot/Elrond.TradeOffer.Web/: Dockerfile  Elrond.TradeOffer.Web.csproj  Program.cs  appsettings.json
src/bot/Elrond.TradeOffer.Web/BotWorkflows/: BotManager.cs  BotNotifications.cs  BotNotificationsHelper.cs  CommonQueries.cs  ElrondTradeOfferBotService.cs  IBotManager.cs  IBotNotifications.cs  IBotNotificationsHelper.cs
src/bot/Elrond.TradeOffer.Web/Controllers/: HomeController.cs
src/bot/Elrond.TradeOffer.Web/Database/: BaseEntity.cs  BidState.cs  DbBid.cs  DbFeatureState.cs  DbOffer.cs  DbUser.cs  ElrondNetwork.cs  ElrondTradeOfferDbContext.cs
src/bot/Elrond.TradeOffer.Web/Extensions/: DbContextExtensions.cs  HexExtensions.cs  StringExtensions.cs  TelegramBotClientExtensions.cs
src/bot/Elrond.TradeOffer.Web/Migrations/: 20220108234821_InitialCreate.Designer.cs  20220108234821_InitialCreate.cs  20220109132607_DbUser.Designer.cs  20220109132607_DbUser.cs  20220114161847_UpdatedCreatedOn.Designer.cs  20220114161847_UpdatedCreatedOn.cs  20220114163027_CreatedAt_Removed.Designer.cs  20220114163027_CreatedAt_Removed.cs  20220115105342_DbFeatureStates.Designer.cs  20220115105342_DbFeatureStates.cs  20220115110658_IsAdminUser.Designer.cs  20220115110658_IsAdminUser.cs  20220115140127_Identifier_renamed_to_Ticker.Designer.cs  20220115140127_Identifier_renamed_to_Ticker.cs  (+5 more)
src/sc/elrondtradeoffer/: Cargo.toml  README.md
src/sc/elrondtradeoffer/wasm/: Cargo.toml
src/sc/elrondtradeoffer/wasm/src/: lib.rs
(+85 files in other folders)
