[package]
name = "elrond_trade_offer-wasm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elrond_trade_offer]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.33.1"

[dependencies.elrond-wasm-output]
version = "0.33.1"
features = [ "wasm-output-mode",]
